#390 Под записью выводится блок автора.

--- a/frontend/web/css/_article.less
+++ b/frontend/web/css/_article.less
@@ -22,4 +22,17 @@
   .article-text {
     margin-top: 7px;
   }
+  footer {
+    .clearfix();
+    padding-top: 20px;
+    border-top: 1px solid #EEE;
+  }
+
+  .entry-author {
+    padding: 20px;
+    margin-bottom: 20px;
+    background: #FCFCFC none repeat scroll 0% 0%;
+    border-bottom: 1px solid #EEE;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  }
 }
