--- a/frontend/web/css/style.less
+++ b/frontend/web/css/style.less
@@ -1,5 +1,9 @@
 @import "_article";
 
+@import "../../../vendor/bower/bootstrap-material-design/less/material.less";
+@primary: @blue-700;
+// Override @primary color with one took from _colors.less
+
 html,
 body {
     height: 100%;
