--- a/frontend/web/css/style.less
+++ b/frontend/web/css/style.less
@@ -89,6 +89,9 @@ a.desc:after {
     color: #999;
 }
 
+.form-group .help-block {
+    display: block;
+}
 .error-summary {
     color: #a94442;
     background: #fdf7f7;
