#611 view of e-mail adapted to site style

--- a/frontend/web/css/style.less
+++ b/frontend/web/css/style.less
@@ -2,7 +2,7 @@
 
 @import "../../../vendor/bower/bootstrap-material-design/less/bootstrap-material-design";
 
-@brand-primary: @blue-700;
+@brand-primary: @red-200;
 // Override @primary color with one took from _colors.less
 
 html,
