--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -112,7 +112,7 @@ h6 {
 a,
 a:hover,
 a:focus {
-  color: #1976d2;
+  color: #ef9a9a;
 }
 a .material-icons,
 a:hover .material-icons,
@@ -179,7 +179,7 @@ body .container .well-primary,
 body .container-fluid .well-primary,
 body .container .jumbotron-primary,
 body .container-fluid .jumbotron-primary {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
 }
 body .container .well-success,
 body .container-fluid .well-success,
@@ -243,7 +243,7 @@ body .container-fluid .jumbotron-danger {
 }
 .btn:not(.btn-raised).btn-primary,
 .input-group-btn .btn:not(.btn-raised).btn-primary {
-  color: #1976d2;
+  color: #ef9a9a;
 }
 .btn:not(.btn-raised).btn-success,
 .input-group-btn .btn:not(.btn-raised).btn-success {
@@ -303,7 +303,7 @@ body .container-fluid .jumbotron-danger {
 .input-group-btn .btn.btn-fab.btn-primary,
 .btn-group-raised .btn.btn-primary,
 .btn-group-raised .input-group-btn .btn.btn-primary {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
   color: rgba(255,255,255, 0.84);
 }
 .btn.btn-raised.btn-success,
@@ -434,7 +434,7 @@ body .container-fluid .jumbotron-danger {
 .input-group-btn .btn.btn-raised:not(.btn-link):active.btn-primary,
 .btn-group-raised .btn:not(.btn-link):active.btn-primary,
 .btn-group-raised .input-group-btn .btn:not(.btn-link):active.btn-primary {
-  background-color: #176cc0;
+  background-color: #ec8888;
 }
 .btn.btn-raised:not(.btn-link):hover.btn-success,
 .input-group-btn .btn.btn-raised:not(.btn-link):hover.btn-success,
@@ -802,7 +802,7 @@ fieldset[disabled][disabled] .btn-group-vertical.btn-group-raised:focus:not(:act
 }
 .btn-group.open > .dropdown-toggle.btn.btn-primary,
 .btn-group-vertical.open > .dropdown-toggle.btn.btn-primary {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
 }
 .btn-group.open > .dropdown-toggle.btn.btn-success,
 .btn-group-vertical.open > .dropdown-toggle.btn.btn-success {
@@ -951,12 +951,12 @@ label.checkbox-inline input[type=checkbox]:focus:not(:checked) + .checkbox-mater
 }
 .checkbox input[type=checkbox]:checked + .checkbox-material .check,
 label.checkbox-inline input[type=checkbox]:checked + .checkbox-material .check {
-  color: #1976d2;
-  border-color: #1976d2;
+  color: #ef9a9a;
+  border-color: #ef9a9a;
 }
 .checkbox input[type=checkbox]:checked + .checkbox-material .check:before,
 label.checkbox-inline input[type=checkbox]:checked + .checkbox-material .check:before {
-  color: #1976d2;
+  color: #ef9a9a;
   box-shadow: 0 0 0 10px, 10px -10px 0 10px, 32px 0 0 20px, 0px 32px 0 20px, -5px 5px 0 10px, 20px -12px 0 11px;
 }
 fieldset[disabled] .checkbox,
@@ -1121,13 +1121,13 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
   left: 15px;
 }
 .togglebutton label input[type=checkbox]:checked + .toggle {
-  background-color: rgba(25, 118, 210, 0.5);
+  background-color: rgba(239, 154, 154, 0.5);
 }
 .togglebutton label input[type=checkbox]:checked + .toggle:after {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
 }
 .togglebutton label input[type=checkbox]:checked + .toggle:active:after {
-  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4), 0 0 0 15px rgba(25, 118, 210, 0.1);
+  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4), 0 0 0 15px rgba(239, 154, 154, 0.1);
 }
 .radio label,
 label.radio-inline {
@@ -1170,7 +1170,7 @@ label.radio-inline .check {
   height: 15px;
   width: 15px;
   border-radius: 100%;
-  background-color: #1976d2;
+  background-color: #ef9a9a;
   transform: scale3d(0, 0, 0);
 }
 .radio .check:after,
@@ -1212,11 +1212,11 @@ label.radio-inline input[type=radio]:checked ~ .circle {
 }
 .radio input[type=radio]:checked ~ .check,
 label.radio-inline input[type=radio]:checked ~ .check {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
 }
 .radio input[type=radio]:checked ~ .circle,
 label.radio-inline input[type=radio]:checked ~ .circle {
-  border-color: #1976d2;
+  border-color: #ef9a9a;
 }
 .radio input[type=radio]:checked ~ .check,
 label.radio-inline input[type=radio]:checked ~ .check {
@@ -1435,7 +1435,7 @@ output {
   background-color: #3f51b5;
 }
 .label.label-primary {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
 }
 .label.label-success {
   background-color: #4caf50;
@@ -1452,7 +1452,7 @@ output {
 .form-control,
 .form-group .form-control {
   border: 0;
-  background-image: linear-gradient(#1976d2, #1976d2), linear-gradient(#D2D2D2, #D2D2D2);
+  background-image: linear-gradient(#ef9a9a, #ef9a9a), linear-gradient(#D2D2D2, #D2D2D2);
   background-size: 0 2px, 100% 1px;
   background-repeat: no-repeat;
   background-position: center bottom, center calc(100% - 1px);
@@ -1514,17 +1514,17 @@ fieldset[disabled] .form-group .form-control {
 }
 .form-group.is-focused .form-control {
   outline: none;
-  background-image: linear-gradient(#1976d2, #1976d2), linear-gradient(#D2D2D2, #D2D2D2);
+  background-image: linear-gradient(#ef9a9a, #ef9a9a), linear-gradient(#D2D2D2, #D2D2D2);
   background-size: 100% 2px, 100% 1px;
   box-shadow: none;
   transition-duration: 0.3s;
 }
 .form-group.is-focused .form-control .material-input:after {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
 }
 .form-group.is-focused label,
 .form-group.is-focused label.control-label {
-  color: #1976d2;
+  color: #ef9a9a;
 }
 .form-group.is-focused.label-placeholder label,
 .form-group.is-focused.label-placeholder label.control-label {
@@ -1968,7 +1968,7 @@ legend {
   float: right;
 }
 .navbar {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
   border: 0;
   border-radius: 0;
 }
@@ -2113,7 +2113,7 @@ fieldset[disabled] .navbar .btn-link:focus {
 }
 .navbar,
 .navbar.navbar-default {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
   color: rgba(255,255,255, 0.84);
 }
 .navbar .navbar-form .form-group input.form-control::-moz-placeholder,
@@ -2147,12 +2147,12 @@ fieldset[disabled] .navbar .btn-link:focus {
 .navbar.navbar-default .dropdown-menu li > a:hover,
 .navbar .dropdown-menu li > a:focus,
 .navbar.navbar-default .dropdown-menu li > a:focus {
-  color: #1976d2;
+  color: #ef9a9a;
   background-color: #eeeeee;
 }
 .navbar .dropdown-menu .active > a,
 .navbar.navbar-default .dropdown-menu .active > a {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
   color: rgba(255,255,255, 0.84);
 }
 .navbar .dropdown-menu .active > a:hover,
@@ -2198,7 +2198,7 @@ fieldset[disabled] .navbar .btn-link:focus {
   color: #ffffff;
 }
 .navbar.navbar-primary {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
   color: rgba(255,255,255, 0.84);
 }
 .navbar.navbar-primary .navbar-form .form-group input.form-control::-moz-placeholder,
@@ -2222,11 +2222,11 @@ fieldset[disabled] .navbar .btn-link:focus {
 }
 .navbar.navbar-primary .dropdown-menu li > a:hover,
 .navbar.navbar-primary .dropdown-menu li > a:focus {
-  color: #1976d2;
+  color: #ef9a9a;
   background-color: #eeeeee;
 }
 .navbar.navbar-primary .dropdown-menu .active > a {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
   color: rgba(255,255,255, 0.84);
 }
 .navbar.navbar-primary .dropdown-menu .active > a:hover,
@@ -2406,7 +2406,7 @@ fieldset[disabled] .navbar .btn-link:focus {
 }
 .dropdown-menu li a:hover {
   background-color: transparent;
-  color: #1976d2;
+  color: #ef9a9a;
 }
 .alert {
   border: 0;
@@ -2432,7 +2432,7 @@ fieldset[disabled] .navbar .btn-link:focus {
   color: #ffffff;
 }
 .alert.alert-primary {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
   color: rgba(255,255,255, 0.84);
 }
 .alert.alert-primary a,
@@ -2492,13 +2492,13 @@ fieldset[disabled] .navbar .btn-link:focus {
 }
 .progress .progress-bar,
 .progress .progress-bar.progress-bar-default {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
 }
 .progress .progress-bar.progress-bar-inverse {
   background-color: #3f51b5;
 }
 .progress .progress-bar.progress-bar-primary {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
 }
 .progress .progress-bar.progress-bar-success {
   background-color: #4caf50;
@@ -2516,7 +2516,7 @@ fieldset[disabled] .navbar .btn-link:focus {
   color: #ff5722;
 }
 .text-primary {
-  color: #1976d2;
+  color: #ef9a9a;
 }
 .text-danger {
   color: #f44336;
@@ -2528,7 +2528,7 @@ fieldset[disabled] .navbar .btn-link:focus {
   color: #03a9f4;
 }
 .nav-tabs {
-  background: #1976d2;
+  background: #ef9a9a;
 }
 .nav-tabs > li > a {
   color: #FFFFFF;
@@ -2685,7 +2685,7 @@ fieldset[disabled] .navbar .btn-link:focus {
   background-color: #3f51b5;
 }
 .panel.panel-primary > .panel-heading {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
 }
 .panel.panel-success > .panel-heading {
   background-color: #4caf50;
@@ -2879,13 +2879,13 @@ hr.on-light {
 }
 .slider.noUi-connect,
 .slider.slider-default.noUi-connect {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
 }
 .slider.slider-inverse.noUi-connect {
   background-color: #3f51b5;
 }
 .slider.slider-primary.noUi-connect {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
 }
 .slider.slider-success.noUi-connect {
   background-color: #4caf50;
@@ -2901,13 +2901,13 @@ hr.on-light {
 }
 .slider .noUi-connect,
 .slider.slider-default .noUi-connect {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
 }
 .slider.slider-inverse .noUi-connect {
   background-color: #3f51b5;
 }
 .slider.slider-primary .noUi-connect {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
 }
 .slider.slider-success .noUi-connect {
   background-color: #4caf50;
@@ -2923,13 +2923,13 @@ hr.on-light {
 }
 .slider .noUi-handle,
 .slider.slider-default .noUi-handle {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
 }
 .slider.slider-inverse .noUi-handle {
   background-color: #3f51b5;
 }
 .slider.slider-primary .noUi-handle {
-  background-color: #1976d2;
+  background-color: #ef9a9a;
 }
 .slider.slider-success .noUi-handle {
   background-color: #4caf50;
@@ -2945,13 +2945,13 @@ hr.on-light {
 }
 .slider .noUi-handle,
 .slider.slider-default .noUi-handle {
-  border-color: #1976d2;
+  border-color: #ef9a9a;
 }
 .slider.slider-inverse .noUi-handle {
   border-color: #3f51b5;
 }
 .slider.slider-primary .noUi-handle {
-  border-color: #1976d2;
+  border-color: #ef9a9a;
 }
 .slider.slider-success .noUi-handle {
   border-color: #4caf50;
