--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -1,3 +1,9 @@
+#article-index h1 {
+  display: inline-block;
+}
+#article-index .search-button {
+  cursor: pointer;
+}
 .article-item {
   margin-bottom: 15px;
 }
